--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -3,10 +3,10 @@
 version: '3'
 
 services:
-  golang-script:
-    container_name: run-golang-script
-    image: golang
+  php-script:
+    container_name: run-php-script
+    image: php
     working_dir: /usr/src/app
-    command: [ "go", "run", "main.go" ]
+    command: [ "php", "main.php" ]
     volumes:
       - ./:/usr/src/app
