--- a/python/docker-compose.yml
+++ b/python/docker-compose.yml
@@ -3,10 +3,10 @@
 version: '3'
 
 services:
-  golang-script:
-    container_name: run-golang-script
-    image: golang
+  python-script:
+    container_name: run-python-script
+    image: python
     working_dir: /usr/src/app
-    command: [ "go", "run", "main.go" ]
+    command: [ "python", "main.py" ]
     volumes:
       - ./:/usr/src/app
