--- a/dotnet/docker-compose.yml
+++ b/dotnet/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3'
 services:
   dotnet-script:
     container_name: run-dotnet-script
-    image: bitnami/dotnet
+    image: mcr.microsoft.com/dotnet/sdk:6.0
     working_dir: /usr/src/app
     command: [ "dotnet", "run" ]
     volumes:
