--- a/nodejs/docker-compose.yml
+++ b/nodejs/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3'
 
 services:
   node-script:
-    container_name: run-ruby-script
+    container_name: run-nodejs-script
     image: node
     working_dir: /usr/src/app
     command: [ "node", "main.js" ]
